k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caddy-site
  namespace: web
spec:
  selector:
    app: caddy-site
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
